--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
+    "sweetalert2": "^11.10.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
